--- a/src/test/resources/repoconfig/application.properties
+++ b/src/test/resources/repoconfig/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driverClassName = org.h2.Driver
 ###
 #   H2 Settings
 ###
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.h2.console.path=/console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
@@ -20,7 +20,7 @@ spring.h2.console.settings.web-allow-others=false
 ###
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.repositories.enabled=false
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -29,7 +29,3 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #   Application Configurations
 ###
 days.to.cache=14
-#fire every 5 min, for testing
-schedule.fire.time=0 0/5 * * * ?
-#fire every day at 02:00 a.m.
-#schedule.fire.time=0 0 2 * * ?
